Fix vertical alignment of current loading text

--- a/src/components/lifting/LeftCard.module.scss
+++ b/src/components/lifting/LeftCard.module.scss
@@ -53,7 +53,7 @@ div.loadingBar {
 // Textual description of the attempt and the weight on the bar.
 div.attemptText {
   width: 100%;
-  padding: 10px 10px 0px 20px;
+  padding: 5px 10px 5px 20px;
 
   background-color: $color-dark;
   color: $color-light;
